--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>in.ashokit</groupId>
-  <artifactId>irctc-app</artifactId>
+  <artifactId>irctc</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>irctc-app Maven Webapp</name>
